--- a/style.css
+++ b/style.css
@@ -37,15 +37,14 @@ body{
     transform-origin: bottom;
     transition: 0.5s;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-position: 100%;
 }
 .box:hover .figure::before{
-    transform: rotateX(90deg) translateY(-50%);
+    transform: rotateY(90deg);
 }
 
 
